# apex

./: .dockerignore  .flake8  .gitignore  .mcp.json  .pre-commit-config.yaml  .vulture_whitelist.py  CHANGELOG.md  CLAUDE.md  IMPLEMENTATION_COMPLETE.md  LICENSE  Makefile  QUICKSTART.md  QUICK_START_GUIDE.md  README.md  SILVER_AWARE_RELEASE_HANDOVER.md  __init__.py  backtester-prd-final.md  diagnose_live_greeks.py  docker-compose.observability.yml  docker-compose.yml  full_validation.json  holdout_validation.json  index.html  main.py  manifest.json  optimization_result.json  package-lock.json  pead.html  pyproject.toml  report.html  requirements-dev.txt  requirements.txt  risk_config.yaml  test_health_live.py  test_health_runtime.sh  test_vix_alert.py  validation.html  wrangler.jsonc  wrangler.toml
.claude/: settings.local.json
.claude/hooks/: append_explain.py
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: auto-format.yml  ci.yml  code-health.yml  daily-pead-screen.yml  daily-signals.yml  daily-strategy-compare.yml  dashboard-refresh.yml  diagrams.yml  hourly-signals.yml  momentum-screen.yml  nightly-full-validation.yml  nightly-signal-validation-deploy.yml  nightly-validation-deploy.yml  nightly-verification.yml  nightly.yml  pr-fast-validation.yml  pr-signal-gates.yml  pullrequest-signal-validation.yml  push-auto-format.yml  push-diagrams.yml  r2-daily-pipeline.yml  r2-data-pipeline.yml  release-holdout-gate.yml  release-holdout.yml  release-validation.yml  release.yml  signal-gates.yml  weekly-code-health.yml
.serena/: project.yml
.taskmaster/: config.json  state.json
.taskmaster/tasks/: tasks.json
assets/: app.js  charts.js  heatmap-theme.css  styles.css
assets/pages/: backtest.js  monitor.js  overview.js  regime.js  screeners.js  signals.js
claudedocs/: implementation-roadmap.md  refactoring-plan.md  security-improvements.md  vectorbt-split-implementation.md
config/: CLAUDE.md  __init__.py  base.yaml  config_manager.py  demo.yaml  gate_policy_clusters.yaml  models.py  momentum_screener.yaml  pead_screener.yaml  persistent.yaml  regime_weights.yaml  risk_config.yaml  server.yaml  universe.yaml
config/backtest/: dual_macd_behavioral.yaml  ma_cross_example.yaml  pairs_trading_example.yaml  portfolio_rebalance_example.yaml
config/prometheus/: alertmanager.yml  prometheus.yml
config/signals/: .ci-smoke-signal.txt  dev.yaml  regime_verification_universe.yaml  rules.yaml  universe.yaml
config/strategy/: buy_and_hold.yaml  ma_cross.yaml  momentum_breakout.yaml  mtf_rsi_trend.yaml  pairs_trading.yaml  pead.yaml  pulse_dip.yaml  regime_flex.yaml  regime_policy.yaml  rsi_mean_reversion.yaml  scheduled_rebalance.yaml  sector_pulse.yaml  squeeze_play.yaml  ta_metrics.yaml  trend_pulse.yaml
config/validation/: .ci-smoke-regime.txt  labeler_thresholds_v1.yaml  optimized_params.yaml  regime_universe.yaml
config/verification/: dev.yaml  manifest.yaml  signal_dev.yaml  signal_manifest.yaml  signal_nightly.yaml  signal_talib.yaml
configs/: default.yaml
configs/strategies/: ma_cross.yaml
data/: AAPL_1d.json  AAPL_1h.json  AAPL_4h.json  ABBV_1d.json  ABBV_1h.json  ABBV_4h.json  ABT_1d.json  ABT_1h.json  ABT_4h.json  ADBE_1d.json  ADBE_1h.json  ADBE_4h.json  AEP_1d.json  AEP_1h.json  AEP_4h.json  AMAT_1d.json  AMAT_1h.json  AMAT_4h.json  AMD_1d.json  AMD_1h.json  AMD_4h.json  AMGN_1d.json  AMGN_1h.json  AMGN_4h.json  AMT_1d.json  AMT_1h.json  AMT_4h.json  AMZN_1d.json  AMZN_1h.json  AMZN_4h.json  APD_1d.json  APD_1h.json  APD_4h.json  ASML_1d.json  ASML_1h.json  ASML_4h.json  AVGO_1d.json  AVGO_1h.json  AVGO_4h.json  AXP_1d.json  (+402 more)
data/historical/: _metadata.duckdb.wal
data/positions/: demo_positions.yaml  manual.yaml
data/regime/: AAPL.html  AAPL_1d.html  AAPL_1h.html  AAPL_4h.html  ABBV.html  ABBV_1d.html  ABBV_1h.html  ABBV_4h.html  ABT.html  ABT_1d.html  ABT_1h.html  ABT_4h.html  ADBE.html  ADBE_1d.html  ADBE_1h.html  ADBE_4h.html  AEP.html  AEP_1d.html  AEP_1h.html  AEP_4h.html  AMAT.html  AMAT_1d.html  AMAT_1h.html  AMAT_4h.html  AMD.html  AMD_1d.html  AMD_1h.html  AMD_4h.html  AMGN.html  AMGN_1d.html  AMGN_1h.html  AMGN_4h.html  AMT.html  AMT_1d.html  AMT_1h.html  AMT_4h.html  AMZN.html  AMZN_1d.html  AMZN_1h.html  AMZN_4h.html  (+540 more)
doc/: OPTION_ISSUES_DIAGNOSTIC.md  PRD_v1.1_Suggestions_and_Improvements.md  code_review.md  risk_signal_analysis.md  tui_scratch_pad.md
doc/plan/: PRD_v1.1_Suggestions_and_Improvements.md  option_risk_signal_implementation_plan.md  phase1_completion_summary.md
doc/plans/: amends.md  persistence_plan.md  persistent_layer_prd_postgres.md  persistent_layer_prd_postgres_review.md
docker/: api.Dockerfile
docs/: OBSERVABILITY_SETUP.md  PERSISTENCE_LAYER.md  STRATEGY_GUIDE.md  USER_MANUAL.md  argon-apex-api.md  argon-signal-consumption.md  livewire-apex-integration.md
docs/backtest/: QUICKSTART.md  user_manual.md
examples/: basic_backtest.py  market_alerts_example.py
make/: validation.mk
migrations/: 002_hypertables.sql  003_indexes.sql  004_views.sql  005_ta_signals.sql  runner.py
nightly/: full_validation.json  holdout_validation.json  index.html  manifest.json  optimization_result.json  report.html  validation.html
scripts/: analyze_report_size.py  backfill.py  bar_cache_service.py  build-dashboard.mjs  check_silver_canary.py  download_sample_data.py  dump_test_fixtures.py  generate_validation_universe.py  historical_data_loader.py  history_loader.py  md2pdf.py  r2_historical_loader.py  r2_market_caps.py  r2_universe_builder.py  retrain_turning_point_models.py  serve.sh  setup_environment.py  test_signal_engine.py  train_turning_point_model.py  trend_pulse_universe.py  trend_pulse_validate.py  validate_gates.py  validate_turning_points.py  validation_workflow.py  verify_milestones.py  verify_system_state.py
snapshots/: payload_snapshot.json
src/: __init__.py
tasks/: todo.md
tests/: CLAUDE.md  __init__.py  conftest.py  diagnose_live_greeks.py  test_vix_alert.py
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
worker-assets/: _headers  index.html
(+2153 files in other folders)
