[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Apex"
version = "0.1.0"
description = "High-performance strategy backtesting system"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Chenxi Li", email = "chenxi,li08@outlook.com"}
]
dependencies = [
    "polars>=0.20.3",
    "vectorbt>=0.26.0",
    "pandas>=2.1.4",
    "numpy>=1.26.3",
    "yfinance>=0.2.36",
    "ccxt>=4.2.0",
    "pandas-ta>=0.3.14b",
    "scikit-learn>=1.4.0",
    "plotly>=5.18.0",
    "pydantic>=2.5.3",
    "fastapi>=0.109.0",
    "click>=8.1.7",
    "pyyaml>=6.0.1",
    "structlog>=24.1.0",
    "asyncio>=3.4.3",
    "aiohttp>=3.9.1",
    "redis>=5.0.1",
    "sqlalchemy>=2.0.25"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "black>=23.12.1",
    "ruff>=0.1.14",
    "mypy>=1.8.0",
    "jupyter>=1.0.0",
    "ipython>=8.19.0"
]
ml = [
    "xgboost>=2.0.3",
    "lightgbm>=4.3.0",
    "optuna>=3.5.0"
]

[project.scripts]
apex = "apex.cli.main:cli"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
select = ["E", "F", "I", "N", "W"]
line-length = 88
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=apex --cov-report=html"