[project]
name = "apex-risk"
version = "0.1.0"
description = "Live Risk Management System for options and derivatives trading"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.14"
license = {text = "MIT"}

dependencies = [
    "ib-async>=2.0.1",      # Interactive Brokers API client (maintained fork of ib_insync)
    "rich>=13.7.0",            # Terminal UI library
    "pyyaml>=6.0.1",           # YAML configuration parsing
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",           # Testing framework
    "pytest-cov>=4.1.0",       # Coverage reporting
    "pytest-asyncio>=0.21.0",  # Async test support
    "mypy>=1.7.0",             # Static type checking
    "black>=23.12.0",          # Code formatting
    "isort>=5.13.0",           # Import sorting
    "flake8>=6.1.0",           # Linting
]

[project.scripts]
apex-risk = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "config"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--cov=src",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=85",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # Default excludes
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | legacy
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip = ["legacy"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = ["legacy/"]

[[tool.mypy.overrides]]
module = "ib_async.*"
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "legacy/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
